[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/ui/ui.gd" type="Script" id=1]
[ext_resource path="res://src/ui/EscapeMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/ui/theme.tres" type="Theme" id=3]
[ext_resource path="res://assets/graphics/ui/frame-export.png" type="Texture" id=4]
[ext_resource path="res://src/ui/NameIslandDialog.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 144, 48 )
margin_left = 48.0
margin_right = 48.0
margin_top = 5.0
margin_bottom = 5.0
expand_margin_left = 48.0
expand_margin_right = 48.0

[sub_resource type="Animation" id=2]
resource_name = "name_label"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("IslandNameView:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 3.1, 3.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 481.5, -54.1106 ), Vector2( 481.5, 17.6571 ), Vector2( 481.5, 17.6571 ), Vector2( 481.5, -57.5281 ) ]
}

[node name="UI" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="EscapeMenu" parent="." instance=ExtResource( 2 )]

[node name="IslandNameView" type="Panel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -30.5
margin_top = -57.5281
margin_right = 30.5
margin_bottom = -9.52813
theme = ExtResource( 3 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="IslandNameView"]
margin_left = -6.65869
margin_top = 4.94492
margin_right = 71.3413
margin_bottom = 35.9449
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Heyhey
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/name_label = SubResource( 2 )

[node name="NameIslandDialog" parent="." instance=ExtResource( 5 )]
popup_exclusive = true
